--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cat Perry's Favourite Cats</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+    <h1> Dancing on my own</h1>
+    <p>Dancing is a form of art that can be used to pass a certain message or entertain</p>
+    <a href="https://en.wikipedia.org/wiki/Dance"> About</a>
+</body>
+</html>
